// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home passes search parameters to JobsList 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-center justify-center min-h-screen p-8 pb-20 gap-8 sm:p-20 font-[family-name:var(--font-geist-sans)]"
  >
    <div
      data-testid="action-bar"
    >
      {"filters":{"categories":["Engineering","Design"],"locations":["Remote","Onsite"]},"lang":"el"}
    </div>
    <main
      class="min-h-screen flex flex-col items-center justify-start w-full max-w-[800px] gap-1"
    >
      <div
        data-testid="search"
      />
      <div
        data-testid="jobs-list"
      >
        {"lang":"el","page":3,"query":"react","location":"Remote","category":"Engineering","pageSize":20}
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`Home renders with default parameters 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-center justify-center min-h-screen p-8 pb-20 gap-8 sm:p-20 font-[family-name:var(--font-geist-sans)]"
  >
    <div
      data-testid="action-bar"
    >
      {"filters":{"categories":["Engineering","Design"],"locations":["Remote","Onsite"]},"lang":"en"}
    </div>
    <main
      class="min-h-screen flex flex-col items-center justify-start w-full max-w-[800px] gap-1"
    >
      <div
        data-testid="search"
      />
      <div
        data-testid="jobs-list"
      >
        {"lang":"en","page":1,"query":"","location":"","category":"","pageSize":10}
      </div>
    </main>
  </div>
</DocumentFragment>
`;
